[package]
authors = ["sanfusu <sanfusu@outlook.com>"]
edition = "2018"
name = "bfd"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
bfd-macro = { path = "./bfd-macro" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[workspace]
