[package]
authors = ["sanfusu <sanfusu@outlook.com>"]
edition = "2018"
name = "flassor"
description = "flat-accessor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
flassor-macro = { path = "./flassor-macro" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[workspace]
members = ["example"]
